updating for some contrast issues

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -18,12 +18,13 @@
 
 $base-font-size:   14px;
 $base-font-weight: 400;
-$small-font-size:  $base-font-size * 1.175;
+$small-font-size:  $base-font-size * 1.475;
 $base-line-height: 1.5;
 
 $spacing-unit:     25px;
 
 $text-color:       #111;
+$link-color: color("light-blue", "darken-4") !default;
 $background-color: #fdfdfd;
 $brand-color:      #2a7ae2;
 
@@ -56,8 +57,15 @@ h1, h2, h3, h4, h5, p, li, span {
 @import "minima";
 @import 'materialize';
 
-.ilike-amber-container {
+.ilike-amber-container:hover {
   @extend .amber, .lighten-1;
+}
+
+.ilike-blue-container:hover {
+
+  @extend .light-blue, .darken-4;
+  color: white;
+  text-decoration: none
 }
 
 
